# gestao-simples

./: .env  .gitignore  LICENSE  README.md  app.py  app_launcher.py  pyproject.toml  setup.py  stop_server.bat
config/: backup_config.json  database.py  settings.py
gestao_simples/: .env.example  app.py
gestao_simples/config/: database.py  settings.py
gestao_simples/models/: base.py  fornecedor.py  inventario_estoque.py  item_inventario.py  item_nota_entrada.py  nota_entrada.py  produto.py  produto_fornecedor_associacao.py  usuario.py
gestao_simples/repositories/: auditoria_repository.py  base_repository.py  inventario_estoque_repository.py  item_nota_entrada_repository.py  nota_entrada_repository.py  produto_fornecedor_associacao_repository.py  produto_repository.py  usuario_repository.py
gestao_simples/services/: auditoria_service.py  auth_service.py  browser_service.py  estoque_service.py  fornecedor_service.py  gemini_service.py  inventario_estoque_service.py  item_nota_entrada_service.py  nota_entrada_service.py  produto_fornecedor_associacao_service.py  produto_service.py  qrcode_service.py  (+1 more)
inno/: BrazilianPortuguese.isl  setup_gestao_simples.iss
models/: __init__.py  base.py  estoque.py  fornecedor.py  item_nfce.py  nfce.py  produto.py
repositories/: estoque_repository.py  fornecedor_repository.py  item_nfce_repository.py  nfce_repository.py  produto_repository.py
services/: browser_service.py  fornecedor_service.py  item_nfce_service.py  nfce_service.py  produto_service.py  qrcode_service.py
utils/: backup_scheduler.py  logger.py  validacoes.py
(+46 files in other folders)
