[project]
name = "gestao-simples"
version = "0.3.0"
description = "Sistema de gestão simplificado para pequenas empresas, que permite a leitura de cupons fiscais via QRCode, coleta automática de dados da SEFAZ-MS através de web scraping e armazenamento seguro em um banco de dados MySQL."
authors = [
    {name = "WolkerDias",email = "wolker.sd@hotmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "streamlit (>=1.41.1,<2.0.0)",
    "streamlit-date-picker (>=0.0.5,<0.0.6)",
    "schedule (>=1.2.2,<2.0.0)",
    "beautifulsoup4 (>=4.13.0,<5.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "urllib3 (>=2.3.0,<3.0.0)",
    "pyzbar (>=0.1.9,<0.2.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "selenium (>=4.28.1,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pwdlib[argon2] (>=0.2.1,<0.3.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "google-generativeai (>=0.8.5,<0.9.0)",
]

[[tool.poetry.packages]]
include = "gestao_simples"

[tool.poetry.group.dev.dependencies]
cx-Freeze = "8.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
